# ChangeLog for dev-perl/Data-ObjectDriver
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-ObjectDriver/ChangeLog,v 1.15 2011/07/30 08:39:24 tove Exp $

  30 Jul 2011; Torsten Veller <tove@gentoo.org> -Data-ObjectDriver-0.80.ebuild:
  Cleanup

*Data-ObjectDriver-0.90.0 (18 Mar 2011)

  18 Mar 2011; Torsten Veller <tove@gentoo.org>
  +Data-ObjectDriver-0.90.0.ebuild:
  Version bump

  27 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  Data-ObjectDriver-0.07.ebuild:
  ppc64 stable wrt #346403

  27 Jan 2011; Brent Baude <ranger@gentoo.org>
  Data-ObjectDriver-0.07.ebuild:
  Marking Data-ObjectDriver-0.07 ppc stable for bug 346403

*Data-ObjectDriver-0.80 (12 Jan 2011)

  12 Jan 2011; Torsten Veller <tove@gentoo.org> +Data-ObjectDriver-0.80.ebuild:
  Version bump

  05 Dec 2010; Raúl Porcel <armin76@gentoo.org> Data-ObjectDriver-0.07.ebuild:
  alpha/ia64/sparc stable wrt #346403

  30 Nov 2010; Markus Meier <maekke@gentoo.org> Data-ObjectDriver-0.07.ebuild:
  x86 stable, bug #346403

  26 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  Data-ObjectDriver-0.07.ebuild:
  Stable on amd64 wrt bug #346403

  11 Jun 2010; Torsten Veller <tove@gentoo.org>
  -Data-ObjectDriver-0.06.ebuild:
  Cleanup

*Data-ObjectDriver-0.07 (24 Mar 2010)

  24 Mar 2010; Torsten Veller <tove@gentoo.org>
  +Data-ObjectDriver-0.07.ebuild:
  Version bump. Run tests

  10 Dec 2009; Brent Baude <ranger@gentoo.org>
  Data-ObjectDriver-0.06.ebuild:
  Marking Data-ObjectDriver-0.06 ~ppc64 for bug 284166

  23 Nov 2009; Torsten Veller <tove@gentoo.org>
  Data-ObjectDriver-0.06.ebuild:
  Depend on Module-Build (#294231) and remove Test-Exception

  27 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
  Data-ObjectDriver-0.06.ebuild:
  Keywording for ppc, bug 284166

  30 Sep 2009; Raúl Porcel <armin76@gentoo.org>
  Data-ObjectDriver-0.06.ebuild:
  Add ~alpha/~ia64/~sparc wrt #284166

*Data-ObjectDriver-0.06 (08 Sep 2009)
