@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Data-ObjectDriver
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-ObjectDriver/ChangeLog,v 1.15 2011/07/30 08:39:24 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-ObjectDriver/ChangeLog,v 1.16 2012/02/03 16:59:09 ago Exp $
+
+  03 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
+  Data-ObjectDriver-0.90.0.ebuild:
+  Stable for amd64, wrt bug #396923
 
   30 Jul 2011; Torsten Veller <tove@gentoo.org> -Data-ObjectDriver-0.80.ebuild:
   Cleanup
